# gdax-trade

./: .buildpacks  .gitignore  Makefile  Procfile  README.md  all.bat  cabal.config  config.yaml  gdax-trade.cabal  log.txt  package.json  package.yaml  server.bat  stack.yaml  startup.bat  trade.bat
app/: Main.hs  Server.hs
data/: config.yaml  gdaxCredentials.json
src/Gdax/Account/: Balance.hs  MyAccount.hs  MyOrder.hs
src/Gdax/Algo/: Action.hs  Brain.hs  Cost.hs  Executor.hs  Master.hs  Optimiser.hs  Strategy.hs  Types.hs  Util.hs
src/Gdax/Algo/Cost/: Calculator.hs
src/Gdax/Algo/Signal/: Direction.hs
src/Gdax/Algo/Strategy/: Momentum.hs  Scalping.hs  Spread.hs  SupportResistance.hs  TurningPoints.hs  Types.hs  Util.hs
src/Gdax/Data/: OrderBook.hs  Product.hs  TimeSeries.hs
src/Gdax/Data/OrderBook/: Internal.hs  Types.hs  Util.hs
src/Gdax/Data/TimeSeries/: Internal.hs  Types.hs  Util.hs
src/Gdax/Feed/: Account.hs  Bundle.hs  Gdax.hs  MyAccount.hs  OrderBook.hs  TimeSeries.hs  Trades.hs
src/Gdax/Feed/Account/: Internal.hs  Types.hs
src/Gdax/Feed/Bundle/: Internal.hs  Types.hs
src/Gdax/Feed/Gdax/: Types.hs
src/Gdax/Feed/MyAccount/: Internal.hs  Types.hs
src/Gdax/Feed/MyAccount/Internal/: Balance.hs  Order.hs
src/Gdax/Feed/OrderBook/: Internal.hs  Types.hs
src/Gdax/Feed/TimeSeries/: Internal.hs  Types.hs
src/Gdax/Feed/Trades/: Internal.hs  Types.hs
src/Gdax/Trade/: Auth.hs  Feed.hs  OrderBook.hs
src/Gdax/Types/: Amount.hs  Bundle.hs  Currency.hs  Order.hs  OrderBook.hs  Product.hs  TimeSeries.hs  Trades.hs
src/Gdax/Types/OrderBook/: Util.hs
src/Gdax/Types/Product/: Feed.hs
src/Gdax/Types/TimeSeries/: Util.hs
src/Gdax/Types/Trades/: Util.hs
src/Gdax/Util/: Auth.hs  Bundle.hs  Config.hs  Constants.hs  Exchange.hs  Feed.hs  Logger.hs  Math.hs  Network.hs  Queue.hs  Throttle.hs  Time.hs
src/Gdax/Util/Config/: Api.hs  Env.hs  Fees.hs  Internal.hs  Log.hs  Server.hs  Strategy.hs  TimeSeries.hs  Trades.hs  Yaml.hs
src/Gdax/Util/Config/Api/: Throttle.hs
src/Gdax/Util/Config/Internal/: Env.hs  Yaml.hs
src/Gdax/Util/Feed/: Bundle.hs  Gdax.hs  MyAccount.hs  OrderBook.hs  TimeSeries.hs
src/Gdax/Util/Throttle/: Api.hs
src/Gdax/Web/: Proxy.hs  Routes.hs  Server.hs  Template.hs  Types.hs
src/Gdax/Web/Handler/: Playground.hs  Stream.hs
src/Gdax/Web/Handlers/: Error.hs  Heroku.hs  Proxy.hs  Rest.hs  StaticData.hs  Stream.hs
src/Gdax/Web/Page/: Playground.hs
src/Gdax/Web/Page/Playground/: Search.hs  Stream.hs
src/Gdax/Web/Playground/: Handler.hs  Model.hs
src/Gdax/Web/Playground/View/: Template.hs
src/Gdax/Web/Playground/View/Fragment/: Error.hs  Rest.hs  Stream.hs
src/Gdax/Web/Types/: Channel.hs  RestMethod.hs
static/: .eslintrc.json  config-store.js  config.js  dashboard-store.js  index.html
static-elm/: elm-package.json  package.json  webpack.config.js
static-elm/src/: App.elm  index.html  index.js  playground.js
static-elm/src/Base/: Config.elm  Model.elm  Msg.elm  Update.elm  View.elm
static-elm/src/Playground/: PlaygroundModel.elm  PlaygroundMsg.elm  PlaygroundUpdate.elm  PlaygroundView.elm
static-elm/src/elm/: Init.elm  Main.elm  Model.elm  Msg.elm  Port.elm  Subscriptions.elm  Update.elm  View.elm
static-elm/src/elm/Model/: Drawer.elm  Http.elm  Navbar.elm  Search.elm  Searchbar.elm
static-elm/src/elm/Model/Search/: SearchResult.elm  Searchbar.elm
static-elm/src/elm/Port/: Drawer.elm  Searchbar.elm
static-elm/src/elm/Service/: Http.elm
static-elm/src/elm/View/: Drawer.elm  Navbar.elm  Search.elm  Searchbar.elm
static-elm/src/elm/View/Search/: SearchResult.elm  Searchbar.elm
static-elm/src/static/: index.html  index.js
static-elm/src/static/styles/: main.scss
static-elm/tests/: Tests.elm
static-old/css/: playground.css  style.css
static-old/js/playground/: search.js  stream.js  tabs.js
static/app/: about.tag  app.tag
static/app/dashboard/: dashboard-form-rest.tag  dashboard-form-stream.tag  dashboard-result.tag  dashboard.tag
static/app/dashboard/form/: dashboard-form-rest.tag  dashboard-form-stream.tag
static/app/layout/: drawer.tag  iframe-modal.tag  navbar.tag
static/app/modal/: docs.tag  live.tag
static/app/view/: dashboard.tag
static/css/: jjsonviewer.min.css  playground.css  style.css
static/js/: jjsonviewer.min.js  playground.js  scripts.js  stream.js
static/scripts/: uri.min.js
test/: Spec.hs
test/Gdax/Algo/Cost/: Test.hs
test/Gdax/Algo/Cost/Test/: Internal.hs
test/Gdax/Data/OrderBook/: Test.hs
test/Gdax/Data/TimeSeries/: Test.hs
test/Gdax/Feed/OrderBook/: Test.hs
test/Gdax/Feed/TimeSeries/: Test.hs
test/Gdax/Test/: Data.hs  Integration.hs  Unit.hs
test/Gdax/Test/Data/: Account.hs  Bundle.hs  Config.hs  Feed.hs  OrderBook.hs  Product.hs  TimeSeries.hs  Trades.hs
test/Gdax/Test/Integration/: Feed.hs
test/Gdax/Test/Integration/Feed/: Account.hs  Bundle.hs  OrderBook.hs  TimeSeries.hs  Trades.hs
test/Gdax/Test/Unit/: Algo.hs
test/Gdax/Test/Unit/Algo/: Cost.hs
test/Gdax/Test/Util/: Math.hs
test/Gdax/Trade/OrderBook/: Test.hs
test/Gdax/Types/Bundle/: Test.hs
test/Gdax/Types/OrderBook/: Test.hs
test/Gdax/Types/Product/: Test.hs
test/Gdax/Util/Config/: Test.hs
test/Gdax/Util/Math/: Test.hs
webapp/: .eslintrc.js  README.md  index.html  package.json
webapp/config/: index.js
webapp/src/: App.vue  main.js
webapp/src/components/: index.js
webapp/src/components/dashboard/: Dashboard.vue
webapp/src/components/dashboard/form/: DashboardRestForm.vue  DashboardStreamForm.vue
webapp/src/components/dashboard/panel/: DashboardForm.vue  DashboardResults.vue
webapp/src/components/json/: JsonEditor.vue  JsonViewer.vue
webapp/src/router/: index.js
webapp/src/services/: api-service.js
webapp/src/store/: actions.js  index.js  mutations.js
webapp/src/store/modules/: config.js  dashboard.js  staticData.js
webapp/test/unit/specs/: HelloWorld.spec.js
