name:                gdax-trade
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gdax-trade#readme
license:             BSD3
license-file:        LICENSE
author:              Karl Chan
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          config.yaml

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Gdax.Account.Balance
                     , Gdax.Account.MyAccount
                     , Gdax.Account.MyOrder
                     , Gdax.Algo.Action
                     , Gdax.Algo.Cost
                     , Gdax.Algo.Executor
                     , Gdax.Algo.Master
                     , Gdax.Algo.Strategy.Spread
                     , Gdax.Algo.Strategy.TurningPoints
                     , Gdax.Algo.Types
                     , Gdax.Data.OrderBook.Types
                     , Gdax.Data.OrderBook.Util
                     , Gdax.Data.TimeSeries.Types
                     , Gdax.Data.TimeSeries.Util
                     , Gdax.Types.Currency
                     , Gdax.Types.Product
                     , Gdax.Util.Bundle
                     , Gdax.Util.Config
                     , Gdax.Util.Config.Fees
                     , Gdax.Util.Feed
                     , Gdax.Util.Feed.Bundle
                     , Gdax.Util.Feed.Gdax
                     , Gdax.Util.Feed.MyAccount
                     , Gdax.Util.Feed.OrderBook
                     , Gdax.Util.Feed.TimeSeries
                     , Gdax.Util.Throttle
                     , Gdax.Util.Queue
                     , Gdax.Web.Server
  other-modules:       Paths_gdax_trade
                     , Gdax.Data.TimeSeries.Internal
                     , Gdax.Data.OrderBook.Internal
                     , Gdax.Util.Config.Internal
                     , Gdax.Web.Handler.Playground
                     , Gdax.Web.Handler.Stream
                     , Gdax.Web.Page.Playground
                     , Gdax.Web.Page.Playground.Search
                     , Gdax.Web.Page.Playground.Stream
                     , Gdax.Web.Proxy
                     , Gdax.Web.Routes
                     , Gdax.Web.Template
                     , Gdax.Web.Types
  build-depends:       base >= 4.7 && < 5
                     , coinbase-exchange
                     , aeson
                     , async
                     , blaze-html
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , deepseq
                     , directory
                     , filepath
                     , happstack-server
                     , happstack-websockets
                     , hashable
                     , hslogger
                     , http-client
                     , http-client-tls
                     , http-types
                     , mtl
                     , pqueue
                     , scientific
                     , split
                     , string-conversions
                     , stm
                     , text
                     , time
                     , unordered-containers
                     , websockets
                     , yaml
  ghc-options:         -fwarn-unused-imports
  default-language:    Haskell2010

executable gdax-trade-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gdax-trade
                     , coinbase-exchange
                     , mtl
                     , time
  default-language:    Haskell2010


executable gdax-trade-server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gdax-trade
                     , mtl
  default-language:    Haskell2010

test-suite gdax-trade-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Gdax.Data.OrderBook.Test
                     , Gdax.Data.TimeSeries.Test
  main-is:             Spec.hs
  build-depends:       base
                     , gdax-trade
                     , coinbase-exchange
                     , unordered-containers
                     , mtl
                     , pqueue
                     , tasty
                     , tasty-hunit
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gdax-trade
