name:                gdax-trade
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/karl-chan/gdax-trade
license:             BSD3
license-file:        LICENSE
author:              Karl Chan
maintainer:          karl-chan@github.com
copyright:           2017 Karl Chan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-dir:            data
data-files:          config.yaml

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
  exposed-modules:     Gdax.Account.Balance
                     , Gdax.Account.MyAccount
                     , Gdax.Account.MyOrder
                     , Gdax.Algo.Action
                     , Gdax.Algo.Cost
                     , Gdax.Algo.Executor
                     , Gdax.Algo.Master
                     , Gdax.Algo.Optimiser
                     , Gdax.Algo.Strategy
                     , Gdax.Algo.Strategy.Momentum
                     , Gdax.Algo.Strategy.Scalping
                     , Gdax.Algo.Strategy.SupportResistance
                     , Gdax.Algo.Types
                     , Gdax.Feed.Bundle
                     , Gdax.Feed.Bundle.Types
                     , Gdax.Feed.Gdax
                     , Gdax.Feed.Gdax.Types
                     , Gdax.Feed.MyAccount
                     , Gdax.Feed.OrderBook
                     , Gdax.Feed.TimeSeries
                     , Gdax.Feed.Trades
                     , Gdax.Feed.MyAccount.Types
                     , Gdax.Feed.OrderBook.Types
                     , Gdax.Feed.TimeSeries.Types
                     , Gdax.Feed.Trades.Types
                     , Gdax.Types.Amount
                     , Gdax.Types.Bundle
                     , Gdax.Types.Currency
                     , Gdax.Types.OrderBook
                     , Gdax.Types.OrderBook.Util
                     , Gdax.Types.Product
                     , Gdax.Types.TimeSeries
                     , Gdax.Types.TimeSeries.Util
                     , Gdax.Types.Trades
                     , Gdax.Util.Config
                     , Gdax.Util.Config.Api
                     , Gdax.Util.Config.Api.Throttle
                     , Gdax.Util.Config.Fees
                     , Gdax.Util.Config.Log
                     , Gdax.Util.Config.Server
                     , Gdax.Util.Feed
                     , Gdax.Util.Logger
                     , Gdax.Util.Math
                     , Gdax.Util.Throttle
                     , Gdax.Util.Time
                     , Gdax.Util.Queue
                     , Gdax.Web.Server
  other-modules:       Paths_gdax_trade
                     , Gdax.Feed.Bundle.Internal
                     , Gdax.Feed.MyAccount.Internal
                     , Gdax.Feed.MyAccount.Internal.Balance
                     , Gdax.Feed.MyAccount.Internal.Order
                     , Gdax.Feed.OrderBook.Internal
                     , Gdax.Feed.TimeSeries.Internal
                     , Gdax.Feed.Trades.Internal
                     , Gdax.Util.Config.Internal.Env
                     , Gdax.Util.Config.Internal.Yaml
                     , Gdax.Web.Handlers.Proxy
                     , Gdax.Web.Handlers.Stream
                     , Gdax.Web.Routes
  build-depends:       base >= 4.7 && < 5
                     , coinbase-exchange
                     , aeson
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , deepseq
                     , fast-logger
                     , filepath
                     , hashable
                     , http-client
                     , http-client-tls
                     , http-types
                     , mtl
                     , pqueue
                     , scientific
                     , split
                     , string-conversions
                     , stm
                     , text
                     , time
                     , unordered-containers
                     , uuid
                     , wai
                     , wai-app-static
                     , wai-extra
                     , warp
                     , websockets
                     , yaml
  default-language:    Haskell2010

executable gdax-trade-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , gdax-trade
                     , mtl
                     , time
  default-language:    Haskell2010


executable gdax-trade-server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , gdax-trade
                     , mtl
  default-language:    Haskell2010

test-suite gdax-trade-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Gdax.Algo.Cost.Test
                     , Gdax.Feed.OrderBook.Test
                     , Gdax.Feed.TimeSeries.Test
                     , Gdax.Types.Bundle.Test
                     , Gdax.Types.OrderBook.Test
                     , Gdax.Types.Product.Test
                     , Gdax.Util.Config.Test
                     , Gdax.Util.Math.Test
  build-depends:       base
                     , gdax-trade
                     , coinbase-exchange
                     , mtl
                     , pqueue
                     , tasty
                     , tasty-hunit
                     , time
                     , unordered-containers
                     , uuid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/karl-chan/gdax-trade
